--- a/study2/1_generative_models/1_1_ae_keras_functional.ipynb
+++ b/study2/1_generative_models/1_1_ae_keras_functional.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1-1 AutoEncoder\n",
+    "\n",
+    "<img src=\"./img/ae.png\" alt=\"autoencoder\" width=\"500\" align=\"left\"/>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -46,6 +55,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[batch_size, 784]\n",
+    "\n",
+    "$\\rightarrow$ Dense(784, 256) $\\rightarrow$ relu $\\rightarrow$ [batch_size, 256]\n",
+    "\n",
+    "$\\rightarrow$ Dense(256, 128) $\\rightarrow$ sigmoid $\\rightarrow$ [batch_size, 128] "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -61,6 +81,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[batch_size, 128]\n",
+    "\n",
+    "$\\rightarrow$ Dense(128, 256) $\\rightarrow$ relu $\\rightarrow$ [batch_size, 256]\n",
+    "\n",
+    "$\\rightarrow$ Dense(256, 784) $\\rightarrow$ sigmoid $\\rightarrow$ [batch_size, 784] "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -73,6 +104,21 @@
     "            net = tf.layers.Dense(units, activation=tf.nn.relu, kernel_initializer=tf.initializers.he_normal())(net)\n",
     "        net = tf.layers.Dense(image_dim, activation=tf.nn.sigmoid, kernel_initializer=tf.initializers.he_normal())(net)\n",
     "        return net"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[batch_size, 784]\n",
+    "\n",
+    "$\\rightarrow$ Dense(784, 256) $\\rightarrow$ relu $\\rightarrow$ [batch_size, 256]\n",
+    "\n",
+    "$\\rightarrow$ Dense(256, 128) $\\rightarrow$ sigmoid $\\rightarrow$ [batch_size, 128] \n",
+    "\n",
+    "$\\rightarrow$ Dense(128, 256) $\\rightarrow$ relu $\\rightarrow$ [batch_size, 256]\n",
+    "\n",
+    "$\\rightarrow$ Dense(256, 784) $\\rightarrow$ sigmoid $\\rightarrow$ [batch_size, 784] "
    ]
   },
   {
@@ -189,13 +235,6 @@
     "    j = np.random.randint(0,9999)\n",
     "    image_plot(x_test[j], predict(x_test[j]))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
