--- a/study2/1_generative_models/1_3_gan_estimator_custom.ipynb
+++ b/study2/1_generative_models/1_3_gan_estimator_custom.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1-3 GAN\n",
+    "\n",
+    "<img src=\"./img/gan.png\" alt=\"autoencoder\" width=\"500\" align=\"left\"/>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -51,6 +60,13 @@
     "NOISE_DIM = 100\n",
     "GEN_HIDDEN_DIM = [256]\n",
     "DISC_HIDDEN_DIM = [256]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"./img/gan_loss.png\" alt=\"ganloss\" width=\"800\" align=\"left\"/>"
    ]
   },
   {
@@ -185,13 +201,6 @@
    "source": [
     "random_image_plot(gan_estimator, gan_model.batch)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
