--- a/study2/2_sequential/2_1_mlp.ipynb
+++ b/study2/2_sequential/2_1_mlp.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2-1. MLP (나비야 음계 학습)\n",
+    "\n",
+    "<img src=\"./img/song.png\" alt=\"song\" width=\"450\" align=\"left\"/>\n",
+    "<img src=\"./img/song_mlp.png\" alt=\"song_mlp\" width=\"450\" align=\"left\"/>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -156,6 +166,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"./img/one_step.png\" alt=\"one_step\" width=\"500\" align=\"left\"/>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -167,6 +184,13 @@
     "for i in range(pred_count):\n",
     "    idx = np.argmax(pred_out[i])\n",
     "    note_onestep.append(idx2note[idx])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"./img/full_song.png\" alt=\"full_song\" width=\"500\" align=\"left\"/>"
    ]
   },
   {
@@ -186,6 +210,13 @@
     "    note_fullsong.append(idx2note[idx])\n",
     "    seq_in.append(idx / float(max_idx_value))\n",
     "    seq_in.pop(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"./img/mlp_result.png\" alt=\"mlp_result\" width=\"500\" align=\"left\"/>"
    ]
   },
   {
