--- a/study2/2_sequential/2_2_lstm.ipynb
+++ b/study2/2_sequential/2_2_lstm.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2-2. LSTM\n",
+    "\n",
+    "<img src=\"./img/lstm.png\" alt=\"lstm\" width=\"500\" align=\"left\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"./img/song_lstm.png\" alt=\"song_lstm\" width=\"500\" align=\"left\"/>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -240,13 +256,6 @@
     "note2midi(note_onestep, 1)\n",
     "note2midi(note_fullsong, 2)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
