--- a/study2/1_generative_models/1_2_vae_keras.ipynb
+++ b/study2/1_generative_models/1_2_vae_keras.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1-2 Variational AutoEncoder\n",
+    "\n",
+    "<img src=\"./img/vae.png\" alt=\"variationalautoencoder\" width=\"500\" align=\"left\"/>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -44,6 +53,14 @@
     "LATENT_DIM = 10\n",
     "ENDOCER_HIDDEN_DIM = [256]\n",
     "DECODER_HIDDEN_DIM = [256]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"./img/vae_recloss.png\" alt=\"vae_recloss\" width=\"400\" align=\"top\"/>\n",
+    "<img src=\"./img/vae_regloss.png\" alt=\"vae_regloss\" width=\"450\" align=\"top\"/>"
    ]
   },
   {
@@ -206,13 +223,6 @@
     "    j = np.random.randint(0,9999)\n",
     "    image_plot(x_test[j], predict(x_test[j]))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
