--- a/study2/1_generative_models/1_3_gan_estimator_custom.ipynb
+++ b/study2/1_generative_models/1_3_gan_estimator_custom.ipynb
@@ -113,7 +113,7 @@
     "        disc_real = self._disc_model(real_image)\n",
     "        disc_fake = self._disc_model(fake_image)\n",
     "        disc_loss = -tf.reduce_mean(tf.log(disc_real) + tf.log(1. - disc_fake))\n",
-    "        gen_loss = -tf.reduce_mean(tf.log(disc_fake))\n",
+    "        gen_loss = tf.reduce_mean(tf.log(1. - disc_fake))\n",
     "        accuracy = tf.metrics.accuracy(labels=tf.zeros(shape=[self.batch_size], dtype=tf.float32),\n",
     "                                    predictions=tf.cast((disc_fake > 0.5),tf.float32),\n",
     "                                    name='acc_op')\n",
