--- a/study2/2_sequential/2_1_mlp.ipynb
+++ b/study2/2_sequential/2_1_mlp.ipynb
@@ -262,6 +262,13 @@
     "note2midi(note_onestep, 1)\n",
     "note2midi(note_fullsong, 2)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[MIDI 재생 사이트 링크](https://onlinesequencer.net/import)"
+   ]
   }
  ],
  "metadata": {
