--- a/study2/2_sequential/2_2_lstm.ipynb
+++ b/study2/2_sequential/2_2_lstm.ipynb
@@ -181,7 +181,7 @@
    "outputs": [],
    "source": [
     "scores = model.evaluate(x_train, y_train, batch_size=1)\n",
-    "print(\"%s: %.2f%%\" %(model.metrics_names[1], scores[1]*100))",
+    "print(\"%s: %.2f%%\" %(model.metrics_names[1], scores[1]*100))\n",
     "model.reset_states()"
    ]
   },
@@ -196,7 +196,7 @@
     "pred_out = model.predict(x_train, batch_size=1)\n",
     "for i in range(pred_count):\n",
     "    idx = np.argmax(pred_out[i])\n",
-    "    note_onestep.append(idx2note[idx])",
+    "    note_onestep.append(idx2note[idx])\n",
     "model.reset_states()"
    ]
   },
@@ -216,7 +216,7 @@
     "    idx = np.argmax(pred_out)\n",
     "    note_fullsong.append(idx2note[idx])\n",
     "    seq_in.append(idx / float(max_idx_value))\n",
-    "    seq_in.pop(0)",
+    "    seq_in.pop(0)\n",
     "model.reset_states()"
    ]
   },
