--- a/study2/0_highlevel/1_2_vae_keras.ipynb
+++ b/study2/0_highlevel/1_2_vae_keras.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# 1-2 Variational AutoEncoder\n",
     "\n",
-    "<img src=\"./img/vae.png\" alt=\"variationalautoencoder\" width=\"500\" align=\"left\"/>"
+    "<img src=\"../1_generative_models/img/vae.png\" alt=\"variationalautoencoder\" width=\"500\" align=\"left\"/>"
    ]
   },
   {
@@ -59,8 +59,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./img/vae_recloss.png\" alt=\"vae_recloss\" width=\"400\" align=\"top\"/>\n",
-    "<img src=\"./img/vae_regloss.png\" alt=\"vae_regloss\" width=\"450\" align=\"top\"/>"
+    "<img src=\"../1_generative_models/img/vae_recloss.png\" alt=\"vae_recloss\" width=\"400\" align=\"top\"/>\n",
+    "<img src=\"../1_generative_models/img/vae_regloss.png\" alt=\"vae_regloss\" width=\"450\" align=\"top\"/>"
    ]
   },
   {
@@ -187,8 +187,7 @@
     "    plt.imshow(true.reshape([28, 28]), cmap = 'gray_r')\n",
     "    plt.subplot(gs[1])\n",
     "    plt.axis('off')\n",
-    "    plt.imshow(recon.reshape([28, 28]), cmap = 'gray_r')\n",
-    "    plt.show()"
+    "    plt.imshow(recon.reshape([28, 28]), cmap = 'gray_r')"
    ]
   },
   {
