--- a/study2/0_highlevel/1_1_ae_keras_functional.ipynb
+++ b/study2/0_highlevel/1_1_ae_keras_functional.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# 1-1 AutoEncoder\n",
     "\n",
-    "<img src=\"./img/ae.png\" alt=\"autoencoder\" width=\"500\" align=\"left\"/>"
+    "<img src=\"../1_generative_models/img/ae.png\" alt=\"autoencoder\" width=\"500\" align=\"left\"/>"
    ]
   },
   {
@@ -199,8 +199,7 @@
     "    plt.imshow(true.reshape([28, 28]), cmap = 'gray_r')\n",
     "    plt.subplot(gs[1])\n",
     "    plt.axis('off')\n",
-    "    plt.imshow(recon.reshape([28, 28]), cmap = 'gray_r')\n",
-    "    plt.show()"
+    "    plt.imshow(recon.reshape([28, 28]), cmap = 'gray_r')"
    ]
   },
   {
