--- a/study2/0_highlevel/1_3_gan_estimator_custom.ipynb
+++ b/study2/0_highlevel/1_3_gan_estimator_custom.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# 1-3 GAN\n",
     "\n",
-    "<img src=\"./img/gan.png\" alt=\"autoencoder\" width=\"500\" align=\"left\"/>"
+    "<img src=\"../1_generative_models/img/gan.png\" alt=\"autoencoder\" width=\"500\" align=\"left\"/>"
    ]
   },
   {
@@ -66,7 +66,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./img/gan_loss.png\" alt=\"ganloss\" width=\"800\" align=\"left\"/>"
+    "<img src=\"../1_generative_models/img/gan_loss.png\" alt=\"ganloss\" width=\"800\" align=\"left\"/>"
    ]
   },
   {
@@ -149,8 +149,7 @@
     "    print(random_image)\n",
     "    for x in random_image:\n",
     "        p = x.reshape([28, 28])\n",
-    "        plt.imshow(p, cmap = 'gray_r')\n",
-    "        plt.show()"
+    "        plt.imshow(p, cmap = 'gray_r')"
    ]
   },
   {
