--- a/study1/4_deep_learning/CNN.ipynb
+++ b/study1/4_deep_learning/CNN.ipynb
@@ -53,15 +53,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#prediction = convolutional_neural_network(input=IMAGES, output_dim=10)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -70,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,19 +118,26 @@
     "    b_fc2 = tf.Variable(tf.zeros([output_dim]))\n",
     "    output = tf.matmul(h_fc1, W_fc2) + b_fc2 #batch_sizex10\n",
     "\n",
-    "    return output\n",
-    "\n",
-    "prediction = convolutional_neural_network(INPUT, output_dim=10)"
+    "    return output"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4) define computational graph"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "logits = convolutional_neural_network(INPUT, output_dim=10)\n",
+    "prediction = tf.nn.softmax(logits)\n",
     "cross_entropy = tf.nn.sparse_softmax_cross_entropy_with_logits(\n",
-    "    labels=LABELS, logits=prediction\n",
+    "    labels=LABELS, logits=logits\n",
     ")\n",
     "cost = tf.reduce_mean(cross_entropy)\n",
     "optimizer = tf.train.GradientDescentOptimizer(0.01).minimize(cost)"
@@ -149,19 +147,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4) load data"
+    "### 5) load data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From <ipython-input-6-f659c5e1ce47>:1: read_data_sets (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:From <ipython-input-5-f659c5e1ce47>:1: read_data_sets (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Please use alternatives such as official/mnist/dataset.py from tensorflow/models.\n",
       "WARNING:tensorflow:From /home/ray/multicamp/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:260: maybe_download (from tensorflow.contrib.learn.python.learn.datasets.base) is deprecated and will be removed in a future version.\n",
@@ -194,18 +192,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5) start training\n",
-    "   #### - set training parameters : batch size, learning rate, total loop"
+    "### 6) start training\n",
+    "   #### - set training parameters : batch size, total loop"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "BATCH_SIZE = 100\n",
-    "LEARNING_RATE = 0.01\n",
     "TOTAL_LOOP = 10000"
    ]
   },
@@ -220,34 +217,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loop: 00500, loss: 0.24762183\n",
-      "loop: 01000, loss: 0.19355531\n",
-      "loop: 01500, loss: 0.15968311\n",
-      "loop: 02000, loss: 0.13976234\n",
-      "loop: 02500, loss: 0.06908678\n",
-      "loop: 03000, loss: 0.09957447\n",
-      "loop: 03500, loss: 0.10375062\n",
-      "loop: 04000, loss: 0.05489205\n",
-      "loop: 04500, loss: 0.120919704\n",
-      "loop: 05000, loss: 0.078065485\n",
-      "loop: 05500, loss: 0.018431403\n",
-      "loop: 06000, loss: 0.03395952\n",
-      "loop: 06500, loss: 0.082293175\n",
-      "loop: 07000, loss: 0.05262528\n",
-      "loop: 07500, loss: 0.10878975\n",
-      "loop: 08000, loss: 0.071632974\n",
-      "loop: 08500, loss: 0.06618172\n",
-      "loop: 09000, loss: 0.07681943\n",
-      "loop: 09500, loss: 0.012724737\n",
-      "loop: 10000, loss: 0.023088682\n",
-      "Training Finished! (loss : 0.023088682)\n"
+      "loop: 00500, loss: 0.26089182\n",
+      "loop: 01000, loss: 0.20281184\n",
+      "loop: 01500, loss: 0.30316508\n",
+      "loop: 02000, loss: 0.17973453\n",
+      "loop: 02500, loss: 0.07031526\n",
+      "loop: 03000, loss: 0.045848485\n",
+      "loop: 03500, loss: 0.09864871\n",
+      "loop: 04000, loss: 0.049694486\n",
+      "loop: 04500, loss: 0.06045299\n",
+      "loop: 05000, loss: 0.0544288\n",
+      "loop: 05500, loss: 0.04542406\n",
+      "loop: 06000, loss: 0.10260047\n",
+      "loop: 06500, loss: 0.06880333\n",
+      "loop: 07000, loss: 0.04494084\n",
+      "loop: 07500, loss: 0.08550602\n",
+      "loop: 08000, loss: 0.0716525\n",
+      "loop: 08500, loss: 0.03382747\n",
+      "loop: 09000, loss: 0.04384382\n",
+      "loop: 09500, loss: 0.023885421\n",
+      "loop: 10000, loss: 0.02851942\n",
+      "Training Finished! (loss : 0.02851942)\n"
      ]
     }
    ],
@@ -279,10 +276,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6) test performance\n",
+    "### 7) test performance\n",
     "\n",
-    " - test image shape: (100, 784)\n",
-    " - test label shape: (100, 10) \n",
+    " - test image shape: (10000, 784)\n",
+    " - test label shape: (10000, 10) \n",
     " \n",
     "\n",
     " - arrB = [[0, 1, 2],[3, 4, 5]]\n",
@@ -302,35 +299,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: {1: 95, 2: 100, 3: 99, 4: 99, 5: 99}\n",
-      "Total mean Accuracy: 98.4\n"
+      "Test Accuracy: 98.27\n"
      ]
     }
    ],
    "source": [
-    "TEST_SAMPLE_SIZE = 100\n",
-    "TEST_NUMBER = 5\n",
-    "accuracy_save = dict()\n",
-    "\n",
-    "for number in range(1, 1+TEST_NUMBER):\n",
-    "    \n",
-    "    test_images, test_labels = mnist.test \\\n",
-    "                                    .next_batch(TEST_SAMPLE_SIZE)\n",
-    "    pred_result = sess.run(\n",
-    "        prediction, \n",
-    "        feed_dict={INPUT: test_images}\n",
-    "    )\n",
-    "\n",
-    "    pred_number = np.argmax(pred_result, axis=1) # 100x1\n",
-    "    label_number = np.where(test_labels)[1] #100x1\n",
-    "    \n",
-    "    accuracy_save[number] = np.sum(pred_number == label_number)\n",
-    "    \n",
-    "print(\"Accuracy:\", accuracy_save)\n",
-    "print(\"Total mean Accuracy:\", \n",
-    "      np.mean(list(accuracy_save.values()))\n",
+    "pred_result = sess.run(\n",
+    "    prediction, \n",
+    "    feed_dict={INPUT: mnist.test.images}\n",
     ")\n",
-    "      "
+    "pred_number = np.argmax(pred_result, axis=1)\n",
+    "label_number = np.where(mnist.test.labels)[1]\n",
+    "\n",
+    "print(\"Test Accuracy:\", 100*np.mean(pred_number == label_number))  "
    ]
   },
   {
