--- a/study1/4_deep_learning/MNIST.ipynb
+++ b/study1/4_deep_learning/MNIST.ipynb
@@ -42,8 +42,10 @@
    },
    "outputs": [],
    "source": [
-    "# 임의의 데이터 출력\n",
-    "print(np.round(mnist.train.images[0],1))"
+    "# 학습 데이터 샘플 1개 확인\n",
+    "print(np.round(mnist.train.images[0],1))\n",
+    "# 학습 데이터 샘플 1개 차원\n",
+    "print(np.shape(mnist.train.images[0]))"
    ]
   },
   {
@@ -52,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 필기체 숫자 10개  출력\n",
+    "# 필기체 숫자 10개 출력\n",
     "print('label:')\n",
     "for i in range(10):\n",
     "    print('%d ' % (np.where(mnist.train.labels[i])[0]), end=\"\")\n",
