--- a/study1/4_deep_learning/MLP.ipynb
+++ b/study1/4_deep_learning/MLP.ipynb
@@ -58,14 +58,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def multi_layer_perceptron(input=None, output_dim=None):\n",
-    "    \n",
-    "#     input_dim = input.shape[1].value\n",
-    "    \n",
-    "#     # your code start here\n",
-    "    \n",
-    "        \n",
-    "#     return output"
+    "weights = {\n",
+    "    'h1':tf.Variable(\n",
+    "        tf.truncated_normal([784, 128], stddev=0.5), name=\"weight_h1\"\n",
+    "    ),\n",
+    "    'h2':tf.Variable(\n",
+    "        tf.truncated_normal([128, 64], stddev=0.5), name=\"weight_h2\"\n",
+    "    ),\n",
+    "    'out':tf.Variable(\n",
+    "        tf.truncated_normal([64, 10], stddev=0.5), name=\"weight_out\"\n",
+    "    )\n",
+    "}\n",
+    "biases = {\n",
+    "    'h1':tf.Variable(tf.random_normal([128]), name=\"bias_h1\"),\n",
+    "    'h2':tf.Variable(tf.random_normal([64]), name=\"bias_h2\"),\n",
+    "    'out':tf.Variable(tf.random_normal([10]), name=\"bias_out\")\n",
+    "}\n",
+    "\n",
+    "def multi_layer_perceptron(input):\n",
+    "    input_to_h1 = tf.add(tf.matmul(input, weights[\"h1\"]), biases[\"h1\"])\n",
+    "    input_to_h1 = tf.nn.relu(input_to_h1)\n",
+    "    h1_to_h2 = tf.add(tf.matmul(input_to_h1, weights[\"h2\"]), biases[\"h2\"])\n",
+    "    h1_to_h2 = tf.nn.relu(h1_to_h2)\n",
+    "    h2_to_output = tf.add(tf.matmul(h1_to_h2, weights[\"out\"]), biases[\"out\"])\n",
+    "    return h2_to_output"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4) define computational graph"
    ]
   },
   {
@@ -74,17 +97,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prediction = multi_layer_perceptron(INPUT, output_dim=10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "logits = multi_layer_perceptron(INPUT)\n",
+    "prediction = tf.nn.softmax(logits)\n",
     "cross_entropy = tf.nn.sparse_softmax_cross_entropy_with_logits(\n",
-    "    labels=LABELS, logits=prediction\n",
+    "    labels=LABELS, logits=logits\n",
     ")\n",
     "cost = tf.reduce_mean(cross_entropy)\n",
     "optimizer = tf.train.GradientDescentOptimizer(0.01).minimize(cost)"
@@ -94,19 +110,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4) load data"
+    "### 5) load data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From <ipython-input-6-f659c5e1ce47>:1: read_data_sets (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:From <ipython-input-5-f659c5e1ce47>:1: read_data_sets (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Please use alternatives such as official/mnist/dataset.py from tensorflow/models.\n",
       "WARNING:tensorflow:From /home/ray/multicamp/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:260: maybe_download (from tensorflow.contrib.learn.python.learn.datasets.base) is deprecated and will be removed in a future version.\n",
@@ -139,18 +155,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5) start training\n",
-    "   #### - set training parameters : batch size, learning rate, total loop"
+    "### 6) start training\n",
+    "   #### - set training parameters : batch size, total loop"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "BATCH_SIZE = 100\n",
-    "LEARNING_RATE = 0.01\n",
     "TOTAL_LOOP = 10000"
    ]
   },
@@ -165,34 +180,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loop: 00500, loss: 0.62088597\n",
-      "loop: 01000, loss: 0.41896534\n",
-      "loop: 01500, loss: 0.4378063\n",
-      "loop: 02000, loss: 0.28321517\n",
-      "loop: 02500, loss: 0.51313496\n",
-      "loop: 03000, loss: 0.2521136\n",
-      "loop: 03500, loss: 0.21186419\n",
-      "loop: 04000, loss: 0.23913167\n",
-      "loop: 04500, loss: 0.4553431\n",
-      "loop: 05000, loss: 0.36936966\n",
-      "loop: 05500, loss: 0.19592823\n",
-      "loop: 06000, loss: 0.20028462\n",
-      "loop: 06500, loss: 0.2702041\n",
-      "loop: 07000, loss: 0.35531288\n",
-      "loop: 07500, loss: 0.3097142\n",
-      "loop: 08000, loss: 0.28895724\n",
-      "loop: 08500, loss: 0.4010969\n",
-      "loop: 09000, loss: 0.289224\n",
-      "loop: 09500, loss: 0.43055683\n",
-      "loop: 10000, loss: 0.27536133\n",
-      "Training Finished! (loss : 0.27536133)\n"
+      "loop: 00500, loss: 2.249472\n",
+      "loop: 01000, loss: 0.7323055\n",
+      "loop: 01500, loss: 0.65563834\n",
+      "loop: 02000, loss: 0.6515252\n",
+      "loop: 02500, loss: 0.65154296\n",
+      "loop: 03000, loss: 0.4016406\n",
+      "loop: 03500, loss: 0.36098552\n",
+      "loop: 04000, loss: 0.30595964\n",
+      "loop: 04500, loss: 0.32331866\n",
+      "loop: 05000, loss: 0.39704713\n",
+      "loop: 05500, loss: 0.4721142\n",
+      "loop: 06000, loss: 0.37430763\n",
+      "loop: 06500, loss: 0.3760868\n",
+      "loop: 07000, loss: 0.29038382\n",
+      "loop: 07500, loss: 0.31935316\n",
+      "loop: 08000, loss: 0.19695689\n",
+      "loop: 08500, loss: 0.2219139\n",
+      "loop: 09000, loss: 0.22153866\n",
+      "loop: 09500, loss: 0.16958572\n",
+      "loop: 10000, loss: 0.2569763\n",
+      "Training Finished! (loss : 0.2569763)\n"
      ]
     }
    ],
@@ -202,8 +217,7 @@
     "\n",
     "for loop in range(1, TOTAL_LOOP + 1):\n",
     "    \n",
-    "    train_images, train_labels = mnist.train \\\n",
-    "                                      .next_batch(BATCH_SIZE)\n",
+    "    train_images, train_labels = mnist.train.next_batch(BATCH_SIZE)\n",
     "    train_labels = np.where(train_labels)[1]\n",
     "        \n",
     "    _, loss = sess.run(\n",
@@ -224,10 +238,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6) test performance\n",
+    "### 7) test performance\n",
     "\n",
-    " - test image shape: (100, 784)\n",
-    " - test label shape: (100, 10) \n",
+    " - test image shape: (10000, 784)\n",
+    " - test label shape: (10000, 10) \n",
     " \n",
     "\n",
     " - arrB = [[0, 1, 2],[3, 4, 5]]\n",
@@ -247,35 +261,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: {1: 97, 2: 97, 3: 91, 4: 89, 5: 95}\n",
-      "Total mean Accuracy: 93.8\n"
+      "Test Accuracy: 90.55\n"
      ]
     }
    ],
    "source": [
-    "TEST_SAMPLE_SIZE = 100\n",
-    "TEST_NUMBER = 5\n",
-    "accuracy_save = dict()\n",
-    "\n",
-    "for number in range(1, 1+TEST_NUMBER):\n",
-    "    \n",
-    "    test_images, test_labels = mnist.test \\\n",
-    "                                    .next_batch(TEST_SAMPLE_SIZE)\n",
-    "    pred_result = sess.run(\n",
-    "        prediction, \n",
-    "        feed_dict={INPUTtest performance: test_images}\n",
-    "    )\n",
-    "\n",
-    "    pred_number = np.argmax(pred_result, axis=1) # 100x1\n",
-    "    label_number = np.where(test_labels)[1] #100x1\n",
-    "    \n",
-    "    accuracy_save[number] = np.sum(pred_number == label_number)\n",
-    "    \n",
-    "print(\"Accuracy:\", accuracy_save)\n",
-    "print(\"Total mean Accuracy:\", \n",
-    "      np.mean(list(accuracy_save.values()))\n",
+    "pred_result = sess.run(\n",
+    "    prediction, \n",
+    "    feed_dict={INPUT: mnist.test.images}\n",
     ")\n",
-    "      "
+    "pred_number = np.argmax(pred_result, axis=1)\n",
+    "label_number = np.where(mnist.test.labels)[1]\n",
+    "\n",
+    "print(\"Test Accuracy:\", 100*np.mean(pred_number == label_number))"
    ]
   },
   {
