--- a/study1/4_deep_learning/SLP.ipynb
+++ b/study1/4_deep_learning/SLP.ipynb
@@ -58,7 +58,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prediction = single_layer_perceptron(INPUT, output_dim=10)"
+    "def single_layer_perceptron(input, input_dim=None, output_dim=None):\n",
+    "    weight = tf.Variable(\n",
+    "        tf.truncated_normal([input_dim, output_dim], stddev=0.5),\n",
+    "        name=\"weight\"\n",
+    "    )\n",
+    "    bias = tf.Variable(\n",
+    "        tf.random_normal([output_dim]), \n",
+    "        name=\"bias\"\n",
+    "    )\n",
+    "    output = tf.add(tf.matmul(input, weight), bias)\n",
+    "    return output"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4) define computational graph"
    ]
   },
   {
@@ -67,8 +84,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "logits = single_layer_perceptron(INPUT, input_dim=784, output_dim=10)\n",
+    "prediction = tf.nn.softmax(logits)\n",
     "cross_entropy = tf.nn.sparse_softmax_cross_entropy_with_logits(\n",
-    "    labels=LABELS, logits=prediction\n",
+    "    logits=logits, labels=LABELS,\n",
     ")\n",
     "cost = tf.reduce_mean(cross_entropy)\n",
     "optimizer = tf.train.GradientDescentOptimizer(0.01).minimize(cost)"
@@ -78,7 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4) load data"
+    "### 5) load data"
    ]
   },
   {
@@ -96,15 +115,10 @@
       "WARNING:tensorflow:From /home/ray/multicamp/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:260: maybe_download (from tensorflow.contrib.learn.python.learn.datasets.base) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Please write your own downloading logic.\n",
-      "WARNING:tensorflow:From /home/ray/multicamp/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/datasets/base.py:252: _internal_retry.<locals>.wrap.<locals>.wrapped_fn (from tensorflow.contrib.learn.python.learn.datasets.base) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Please use urllib or similar directly.\n",
-      "Successfully downloaded train-images-idx3-ubyte.gz 9912422 bytes.\n",
       "WARNING:tensorflow:From /home/ray/multicamp/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:262: extract_images (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Please use tf.data to implement this functionality.\n",
       "Extracting ./data/train-images-idx3-ubyte.gz\n",
-      "Successfully downloaded train-labels-idx1-ubyte.gz 28881 bytes.\n",
       "WARNING:tensorflow:From /home/ray/multicamp/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:267: extract_labels (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Please use tf.data to implement this functionality.\n",
@@ -112,9 +126,7 @@
       "WARNING:tensorflow:From /home/ray/multicamp/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:110: dense_to_one_hot (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Please use tf.one_hot on tensors.\n",
-      "Successfully downloaded t10k-images-idx3-ubyte.gz 1648877 bytes.\n",
       "Extracting ./data/t10k-images-idx3-ubyte.gz\n",
-      "Successfully downloaded t10k-labels-idx1-ubyte.gz 4542 bytes.\n",
       "Extracting ./data/t10k-labels-idx1-ubyte.gz\n",
       "WARNING:tensorflow:From /home/ray/multicamp/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:290: DataSet.__init__ (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
@@ -130,8 +142,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5) start training\n",
-    "   #### - set training parameters : batch size, learning rate, total loop"
+    "### 6) start training\n",
+    "   #### - set training parameters : batch size, total loop"
    ]
   },
   {
@@ -141,7 +153,6 @@
    "outputs": [],
    "source": [
     "BATCH_SIZE = 100\n",
-    "LEARNING_RATE = 0.01\n",
     "TOTAL_LOOP = 10000"
    ]
   },
@@ -163,27 +174,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loop: 00500, loss: 0.802748\n",
-      "loop: 01000, loss: 0.5748601\n",
-      "loop: 01500, loss: 0.4936064\n",
-      "loop: 02000, loss: 0.5051746\n",
-      "loop: 02500, loss: 0.44355556\n",
-      "loop: 03000, loss: 0.45895016\n",
-      "loop: 03500, loss: 0.42888954\n",
-      "loop: 04000, loss: 0.31302333\n",
-      "loop: 04500, loss: 0.3861348\n",
-      "loop: 05000, loss: 0.32526612\n",
-      "loop: 05500, loss: 0.3376405\n",
-      "loop: 06000, loss: 0.49178123\n",
-      "loop: 06500, loss: 0.29699612\n",
-      "loop: 07000, loss: 0.3339426\n",
-      "loop: 07500, loss: 0.3189332\n",
-      "loop: 08000, loss: 0.2768181\n",
-      "loop: 08500, loss: 0.36513966\n",
-      "loop: 09000, loss: 0.4450225\n",
-      "loop: 09500, loss: 0.2547568\n",
-      "loop: 10000, loss: 0.2691984\n",
-      "Training Finished! (loss : 0.2691984)\n"
+      "loop: 00500, loss: 1.7378072\n",
+      "loop: 01000, loss: 1.1271045\n",
+      "loop: 01500, loss: 0.9755794\n",
+      "loop: 02000, loss: 0.7712399\n",
+      "loop: 02500, loss: 0.75551546\n",
+      "loop: 03000, loss: 0.5280251\n",
+      "loop: 03500, loss: 0.44963023\n",
+      "loop: 04000, loss: 1.2224842\n",
+      "loop: 04500, loss: 0.58748823\n",
+      "loop: 05000, loss: 0.7588678\n",
+      "loop: 05500, loss: 0.7602155\n",
+      "loop: 06000, loss: 0.61365014\n",
+      "loop: 06500, loss: 0.61279976\n",
+      "loop: 07000, loss: 0.48449862\n",
+      "loop: 07500, loss: 0.48685178\n",
+      "loop: 08000, loss: 0.4756797\n",
+      "loop: 08500, loss: 0.6117345\n",
+      "loop: 09000, loss: 0.512618\n",
+      "loop: 09500, loss: 0.5339906\n",
+      "loop: 10000, loss: 0.5419615\n",
+      "Training Finished! (loss : 0.5419615)\n"
      ]
     }
    ],
@@ -193,8 +204,7 @@
     "\n",
     "for loop in range(1, TOTAL_LOOP + 1):\n",
     "    \n",
-    "    train_images, train_labels = mnist.train \\\n",
-    "                                      .next_batch(BATCH_SIZE)\n",
+    "    train_images, train_labels = mnist.train.next_batch(BATCH_SIZE)\n",
     "    train_labels = np.where(train_labels)[1]\n",
     "        \n",
     "    _, loss = sess.run(\n",
@@ -215,10 +225,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6) test performance\n",
+    "### 7) test performance\n",
     "\n",
-    " - test image shape: (100, 784)\n",
-    " - test label shape: (100, 10) \n",
+    " - test image shape: (10000, 784)\n",
+    " - test label shape: (10000, 10) \n",
     " \n",
     "\n",
     " - arrB = [[0, 1, 2],[3, 4, 5]]\n",
@@ -238,36 +248,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: {1: 95, 2: 92, 3: 83, 4: 93, 5: 88}\n",
-      "Total mean Accuracy: 90.2\n"
+      "Test Accuracy: 86.83\n"
      ]
     }
    ],
    "source": [
-    "TEST_SAMPLE_SIZE = 100\n",
-    "TEST_NUMBER = 5\n",
-    "accuracy_save = dict()\n",
-    "\n",
-    "for number in range(1, 1+TEST_NUMBER):\n",
-    "    \n",
-    "    test_images, test_labels = mnist.test \\\n",
-    "                                    .next_batch(TEST_SAMPLE_SIZE)\n",
-    "    pred_result = sess.run(\n",
-    "        prediction, \n",
-    "        feed_dict={INPUT: test_images}\n",
-    "    )\n",
-    "\n",
-    "    pred_number = np.argmax(pred_result, axis=1) # 100x1\n",
-    "    label_number = np.where(test_labels)[1] #100x1\n",
-    "    \n",
-    "    accuracy_save[number] = np.sum(pred_number == label_number)\n",
-    "    \n",
-    "print(\"Accuracy:\", accuracy_save)\n",
-    "print(\"Total mean Accuracy:\", \n",
-    "      np.mean(list(accuracy_save.values()))\n",
+    "pred_result = sess.run(\n",
+    "    prediction, \n",
+    "    feed_dict={INPUT: mnist.test.images}\n",
     ")\n",
-    "      "
+    "pred_number = np.argmax(pred_result, axis=1)\n",
+    "label_number = np.where(mnist.test.labels)[1]\n",
+    "\n",
+    "print(\"Test Accuracy:\", 100*np.mean(pred_number == label_number))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
