update to new lecture files

--- a/study1/1_python/Python basic.ipynb
+++ b/study1/1_python/Python basic.ipynb
@@ -141,7 +141,6 @@
    "source": [
     "word='Python'\n",
     "print('1)', word[0], ',', word[5])\n",
-    "# pinrt(word[0]='A')\n",
     "print('2)', word[-1])\n",
     "print('3)', word[0:2] + word[2:])\n",
     "print('4)', len(word))"
@@ -236,8 +235,6 @@
     "\n",
     "print('1)', tel1['jack'], tel2[1])\n",
     "\n",
-    "#tel4 = {['jack']:4098, ['sape']:4139}\n",
-    "\n",
     "tel1['jack'] = 5098\n",
     "tel1['guido'] = 4127\n",
     "del(tel1['sape'])\n",
@@ -275,18 +272,14 @@
     }
    ],
    "source": [
-    "t = 12345, 54321, 'hello!' # same as t = (12345, 54321, 'hello!')\n",
+    "t = (12345, 54321, 'hello!')\n",
     "print('1)', t)\n",
     "print('2)', t[0])\n",
     "u = t, (1, 2, 3, 4, 5)\n",
     "print('3)', u)\n",
-    "#t[0] = 8888\n",
     "v = ([1, 2, 3], [3, 2, 1])\n",
     "v[0][1] = 0 \n",
-    "print('4)', v)\n",
-    "\n",
-    "# tuple unpacking\n",
-    "x ,y, z = t"
+    "print('4)', v)"
    ]
   },
   {
@@ -547,29 +540,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5-2 클래스\n",
+    "  - 데이터(상태값)와 함수(메서드)을 함께 묶어 객체의 새 형태를 정의하는데 사용 (= 객체의 틀을 만든다.)\n",
+    "  - 정의된 클래스의 인스턴스를 만들어 클래스를 활용 (= 정의된 틀을 가지고 제품들을 찍어낸다.)\n",
+    "  - 인스턴스의 속성과 메서드에 대한 접근은 \"인스턴스.속성 or 인스턴스.메서드\"\n",
+    "  - 파생클래스를 만들수 있는 상속, 다중상속을 지원"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n",
-      "6\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# 위치 인자, 키워드 인자(함수 호출시, 위치 인자 뒤에만 가능)\n",
-    "def add(a, *, b=2):\n",
-    "    c = a + b\n",
-    "    return c\n",
+    "class Car:\n",
+    "    \"\"\"A simple example class\"\"\"\n",
     "\n",
-    "print(add(2))\n",
-    "#print(add(2,4))\n",
-    "print(add(2,b=4))\n",
-    "#print(add(b=4,2))"
+    "    # 인스턴스 생성시에 호출되는 초기화 함수\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "        self.mileage = 0\n",
+    "        \n",
+    "    # 인스턴스의 속성을 변경하는 메서드\n",
+    "    def drive(self, distance):\n",
+    "        self.mileage = self.mileage + distance\n",
+    "    \n",
+    "    "
    ]
   },
   {
@@ -581,127 +580,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3, -1)\n"
+      "S-class\n",
+      "0\n"
      ]
     }
    ],
    "source": [
-    "# 두개이상 결과 값 반환\n",
-    "def add_minus(a, *, b=2):\n",
-    "    r1 = a + b\n",
-    "    r2 = a - b\n",
-    "    return r1, r2\n",
-    "\n",
-    "print(add_minus(1,b=2))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 5-2 클래스\n",
-    "  - 데이터(상태값)와 함수(메서드)을 함께 묶어 객체의 새 형태를 정의하는데 사용 (= 객체의 틀을 만든다.)\n",
-    "  - 정의된 클래스의 인스턴스를 만들어 클래스를 활용 (= 정의된 틀을 가지고 제품들을 찍어낸다.)\n",
-    "  - 파생클래스를 만들수 있는 상속, 다중상속을 지원"
+    "car = Car('S-class')\n",
+    "print(car.name)\n",
+    "print(car.mileage)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "class MyClass:\n",
-    "    \"\"\"A simple example class\"\"\"\n",
-    "    data = 12345\n",
-    "\n",
-    "#     def __init__(self, data):\n",
-    "#         self.data=data\n",
-    "        \n",
-    "    def f1(self, string):\n",
-    "        return string\n",
-    "    \n",
-    "    def f2(string):\n",
-    "        return string"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12345\n",
-      "<function MyClass.f1 at 0x7f3d48042d90>\n"
+      "20\n",
+      "<function Car.drive at 0x7f00407b9378>\n"
      ]
     }
    ],
    "source": [
-    "print(MyClass.data)\n",
-    "print(MyClass.f1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "12345\n",
-      "hello world\n",
-      "hello world\n"
-     ]
-    }
-   ],
-   "source": [
-    "x = MyClass()\n",
-    "print(x.data)\n",
-    "print(x.f1('hello world'))\n",
-    "print(MyClass.f1(x, 'hello world'))\n",
-    "# print(x.f2('hello world'))\n",
-    "# print(MyClass.f2('hello world'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x's name space: {}\n",
-      "MyClass's name space:\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "mappingproxy({'__module__': '__main__',\n",
-       "              '__doc__': 'A simple example class',\n",
-       "              'data': 12345,\n",
-       "              'f1': <function __main__.MyClass.f1(self, string)>,\n",
-       "              'f2': <function __main__.MyClass.f2(string)>,\n",
-       "              '__dict__': <attribute '__dict__' of 'MyClass' objects>,\n",
-       "              '__weakref__': <attribute '__weakref__' of 'MyClass' objects>})"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "print('x\\'s name space:', x.__dict__)\n",
-    "print('MyClass\\'s name space:')\n",
-    "MyClass.__dict__"
+    "car.drive(20)\n",
+    "print(car.mileage)\n",
+    "print(Car.drive)"
    ]
   },
   {
@@ -722,16 +629,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %load fibo.py"
+    "# %load fibo.py\n",
+    "# Fibonacci numbers module\n",
+    "\n",
+    "def fib(n):    # write Fibonacci series up to n\n",
+    "    a, b = 0, 1\n",
+    "    while a < n:\n",
+    "        print(a, end=' ')\n",
+    "        a, b = b, a+b\n",
+    "    print()\n",
+    "\n",
+    "def fib2(n):   # return Fibonacci series up to n\n",
+    "    result = []\n",
+    "    a, b = 0, 1\n",
+    "    while a < n:\n",
+    "        result.append(a)\n",
+    "        a, b = b, a+b\n",
+    "    return result\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "\tprint('this file is executed as a script not a module')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -814,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -824,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
